--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "turso-migrate"
 version = "0.1.0"
+authors = ["Manuel Adameit <mail@manueladameit.com>"]
+categories = ["database"]
+description = "Simple schema migration library for turso using user_version instead of an SQL table to maintain the current schema version."
+documentation = "https://docs.rs/turso-migrate"
 edition = "2021"
+keywords = ["database", "migration", "turso", "sqlite"]
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/maun/turso-migrate"
 
 [dependencies]
 thiserror = "2.0.11"
